Added execution target for Java Flight Recorder (Jade)